--- a/catalog.html
+++ b/catalog.html
@@ -163,52 +163,42 @@
                 <li class="setup-product__makers-item setup-product__makers-item--bosch-maker">
                   <label class="setup-product__label-field" for="bosch">Bosch</label>
                   <input class="setup-product__field setup-product__field--makers-field visually-hidden" type="checkbox" id="bosch" checked>
-                  <span class="setup-product__field-indicator setup-product__field-indicator--checkbox">
-                    <svg class="setup-product__checkbox-off" xmlns="http://www.w3.org/2000/svg" width="23" height="23"><path fill="#c5c5c5" d="M20 2c.542 0 1 .458 1 1v17c0 .542-.458 1-1 1H3c-.542 0-1-.458-1-1V3c0-.542.458-1 1-1h17m0-2H3C1.35 0 0 1.35 0 3v17c0 1.65 1.35 3 3 3h17c1.65 0 3-1.35 3-3V3c0-1.65-1.35-3-3-3z"/>
-                    </svg>
-                    <svg class="setup-product__checkbox-on" xmlns="http://www.w3.org/2000/svg" width="27" height="23"><path fill="#c5c5c5" d="M7.285 7.486l-2.829 2.829 7.783 7.783L26.171 4.166l-2.828-2.829-11.104 11.102z"/><path fill="#c5c5c5" d="M21 20c0 .542-.458 1-1 1H3c-.542 0-1-.458-1-1V3c0-.542.458-1 1-1h16.908L21.493.415A2.96 2.96 0 0 0 20 0H3C1.35 0 0 1.35 0 3v17c0 1.65 1.35 3 3 3h17c1.65 0 3-1.35 3-3v-9.829l-2 2V20z"/>
-                    </svg>
-                  </span>
+                  <svg class="setup-product__field-indicator setup-product__field-indicator--checkbox-on" fill="#c5c5c5" xmlns="http://www.w3.org/2000/svg" width="27" height="23"><path d="M7.285 7.486l-2.829 2.829 7.783 7.783L26.171 4.166l-2.828-2.829-11.104 11.102z"/><path fill="#c5c5c5" d="M21 20c0 .542-.458 1-1 1H3c-.542 0-1-.458-1-1V3c0-.542.458-1 1-1h16.908L21.493.415A2.96 2.96 0 0 0 20 0H3C1.35 0 0 1.35 0 3v17c0 1.65 1.35 3 3 3h17c1.65 0 3-1.35 3-3v-9.829l-2 2V20z"/>
+                  </svg>
+                  <svg class="setup-product__field-indicator setup-product__field-indicator--checkbox-off" fill="#c5c5c5" xmlns="http://www.w3.org/2000/svg" width="23" height="23"><path d="M20 2c.542 0 1 .458 1 1v17c0 .542-.458 1-1 1H3c-.542 0-1-.458-1-1V3c0-.542.458-1 1-1h17m0-2H3C1.35 0 0 1.35 0 3v17c0 1.65 1.35 3 3 3h17c1.65 0 3-1.35 3-3V3c0-1.65-1.35-3-3-3z"/>
+                  </svg>
                 </li>
                 <li class="setup-product__makers-item setup-product__makers-item--interskol-maker">
                   <label class="setup-product__label-field" for="интерскол">Интерскол</label>
                   <input class="setup-product__field setup-product__field--makers-field visually-hidden" type="checkbox" id="интерскол">
-                  <span class="setup-product__field-indicator setup-product__field-indicator--checkbox">
-                    <svg class="setup-product__checkbox-off" xmlns="http://www.w3.org/2000/svg" width="23" height="23"><path fill="#c5c5c5" d="M20 2c.542 0 1 .458 1 1v17c0 .542-.458 1-1 1H3c-.542 0-1-.458-1-1V3c0-.542.458-1 1-1h17m0-2H3C1.35 0 0 1.35 0 3v17c0 1.65 1.35 3 3 3h17c1.65 0 3-1.35 3-3V3c0-1.65-1.35-3-3-3z"/>
-                    </svg>
-                    <svg class="setup-product__checkbox-on" xmlns="http://www.w3.org/2000/svg" width="27" height="23"><path fill="#c5c5c5" d="M7.285 7.486l-2.829 2.829 7.783 7.783L26.171 4.166l-2.828-2.829-11.104 11.102z"/><path fill="#c5c5c5" d="M21 20c0 .542-.458 1-1 1H3c-.542 0-1-.458-1-1V3c0-.542.458-1 1-1h16.908L21.493.415A2.96 2.96 0 0 0 20 0H3C1.35 0 0 1.35 0 3v17c0 1.65 1.35 3 3 3h17c1.65 0 3-1.35 3-3v-9.829l-2 2V20z"/>
-                    </svg>
-                  </span>
+                  <svg class="setup-product__field-indicator setup-product__field-indicator--checkbox-on" fill="#c5c5c5" xmlns="http://www.w3.org/2000/svg" width="27" height="23"><path d="M7.285 7.486l-2.829 2.829 7.783 7.783L26.171 4.166l-2.828-2.829-11.104 11.102z"/><path fill="#c5c5c5" d="M21 20c0 .542-.458 1-1 1H3c-.542 0-1-.458-1-1V3c0-.542.458-1 1-1h16.908L21.493.415A2.96 2.96 0 0 0 20 0H3C1.35 0 0 1.35 0 3v17c0 1.65 1.35 3 3 3h17c1.65 0 3-1.35 3-3v-9.829l-2 2V20z"/>
+                  </svg>
+                  <svg class="setup-product__field-indicator setup-product__field-indicator--checkbox-off" fill="#c5c5c5" xmlns="http://www.w3.org/2000/svg" width="23" height="23"><path d="M20 2c.542 0 1 .458 1 1v17c0 .542-.458 1-1 1H3c-.542 0-1-.458-1-1V3c0-.542.458-1 1-1h17m0-2H3C1.35 0 0 1.35 0 3v17c0 1.65 1.35 3 3 3h17c1.65 0 3-1.35 3-3V3c0-1.65-1.35-3-3-3z"/>
+                  </svg>
                 </li>
                 <li class="setup-product__makers-item setup-product__makers-item--makita-maker">
                   <label class="setup-product__label-field" for="makita">Makita</label>
                   <input class="setup-product__field setup-product__field--makers-field visually-hidden" type="checkbox" id="makita" checked>
-                  <span class="setup-product__field-indicator setup-product__field-indicator--checkbox">
-                    <svg class="setup-product__checkbox-off" xmlns="http://www.w3.org/2000/svg" width="23" height="23"><path fill="#c5c5c5" d="M20 2c.542 0 1 .458 1 1v17c0 .542-.458 1-1 1H3c-.542 0-1-.458-1-1V3c0-.542.458-1 1-1h17m0-2H3C1.35 0 0 1.35 0 3v17c0 1.65 1.35 3 3 3h17c1.65 0 3-1.35 3-3V3c0-1.65-1.35-3-3-3z"/>
-                    </svg>
-                    <svg class="setup-product__checkbox-on" xmlns="http://www.w3.org/2000/svg" width="27" height="23"><path fill="#c5c5c5" d="M7.285 7.486l-2.829 2.829 7.783 7.783L26.171 4.166l-2.828-2.829-11.104 11.102z"/><path fill="#c5c5c5" d="M21 20c0 .542-.458 1-1 1H3c-.542 0-1-.458-1-1V3c0-.542.458-1 1-1h16.908L21.493.415A2.96 2.96 0 0 0 20 0H3C1.35 0 0 1.35 0 3v17c0 1.65 1.35 3 3 3h17c1.65 0 3-1.35 3-3v-9.829l-2 2V20z"/>
-                    </svg>
-                  </span>
+                  <svg class="setup-product__field-indicator setup-product__field-indicator--checkbox-on" xmlns="http://www.w3.org/2000/svg" fill="#c5c5c5" width="27" height="23"><path d="M7.285 7.486l-2.829 2.829 7.783 7.783L26.171 4.166l-2.828-2.829-11.104 11.102z"/><path fill="#c5c5c5" d="M21 20c0 .542-.458 1-1 1H3c-.542 0-1-.458-1-1V3c0-.542.458-1 1-1h16.908L21.493.415A2.96 2.96 0 0 0 20 0H3C1.35 0 0 1.35 0 3v17c0 1.65 1.35 3 3 3h17c1.65 0 3-1.35 3-3v-9.829l-2 2V20z"/>
+                  </svg>
+                  <svg class="setup-product__field-indicator setup-product__field-indicator--checkbox-off" xmlns="http://www.w3.org/2000/svg" fill="#c5c5c5" width="23" height="23"><path d="M20 2c.542 0 1 .458 1 1v17c0 .542-.458 1-1 1H3c-.542 0-1-.458-1-1V3c0-.542.458-1 1-1h17m0-2H3C1.35 0 0 1.35 0 3v17c0 1.65 1.35 3 3 3h17c1.65 0 3-1.35 3-3V3c0-1.65-1.35-3-3-3z"/>
+                  </svg>
                 </li>
                 <li class="setup-product__makers-item setup-product__makers-item--dewalt-maker">
                   <label class="setup-product__label-field" for="dewalt">Dewalt</label>
                   <input class="setup-product__field setup-product__field--makers-field visually-hidden" type="checkbox" id="dewalt">
-                  <span class="setup-product__field-indicator setup-product__field-indicator--checkbox">
-                    <svg class="setup-product__checkbox-off" xmlns="http://www.w3.org/2000/svg" width="23" height="23"><path fill="#c5c5c5" d="M20 2c.542 0 1 .458 1 1v17c0 .542-.458 1-1 1H3c-.542 0-1-.458-1-1V3c0-.542.458-1 1-1h17m0-2H3C1.35 0 0 1.35 0 3v17c0 1.65 1.35 3 3 3h17c1.65 0 3-1.35 3-3V3c0-1.65-1.35-3-3-3z"/>
-                    </svg>
-                    <svg class="setup-product__checkbox-on" xmlns="http://www.w3.org/2000/svg" width="27" height="23"><path fill="#c5c5c5" d="M7.285 7.486l-2.829 2.829 7.783 7.783L26.171 4.166l-2.828-2.829-11.104 11.102z"/><path fill="#c5c5c5" d="M21 20c0 .542-.458 1-1 1H3c-.542 0-1-.458-1-1V3c0-.542.458-1 1-1h16.908L21.493.415A2.96 2.96 0 0 0 20 0H3C1.35 0 0 1.35 0 3v17c0 1.65 1.35 3 3 3h17c1.65 0 3-1.35 3-3v-9.829l-2 2V20z"/>
-                    </svg>
-                  </span>
+                  <svg class="setup-product__field-indicator setup-product__field-indicator--checkbox-on" fill="#c5c5c5" xmlns="http://www.w3.org/2000/svg" width="27" height="23"><path d="M7.285 7.486l-2.829 2.829 7.783 7.783L26.171 4.166l-2.828-2.829-11.104 11.102z"/><path fill="#c5c5c5" d="M21 20c0 .542-.458 1-1 1H3c-.542 0-1-.458-1-1V3c0-.542.458-1 1-1h16.908L21.493.415A2.96 2.96 0 0 0 20 0H3C1.35 0 0 1.35 0 3v17c0 1.65 1.35 3 3 3h17c1.65 0 3-1.35 3-3v-9.829l-2 2V20z"/>
+                  </svg>
+                  <svg class="setup-product__field-indicator setup-product__field-indicator--checkbox-off" fill="#c5c5c5" xmlns="http://www.w3.org/2000/svg" width="23" height="23"><path d="M20 2c.542 0 1 .458 1 1v17c0 .542-.458 1-1 1H3c-.542 0-1-.458-1-1V3c0-.542.458-1 1-1h17m0-2H3C1.35 0 0 1.35 0 3v17c0 1.65 1.35 3 3 3h17c1.65 0 3-1.35 3-3V3c0-1.65-1.35-3-3-3z"/>
+                  </svg>
                 </li>
                 <li class="setup-product__makers-item setup-product__makers-item--hitachi-maker">
                   <label class="setup-product__label-field" for="hitachi">Hitachi</label>
                   <input class="setup-product__field setup-product__field--makers-field visually-hidden" type="checkbox" id="hitachi">
-                  <span class="setup-product__field-indicator setup-product__field-indicator--checkbox">
-                    <svg class="setup-product__checkbox-off" xmlns="http://www.w3.org/2000/svg" width="23" height="23"><path fill="#c5c5c5" d="M20 2c.542 0 1 .458 1 1v17c0 .542-.458 1-1 1H3c-.542 0-1-.458-1-1V3c0-.542.458-1 1-1h17m0-2H3C1.35 0 0 1.35 0 3v17c0 1.65 1.35 3 3 3h17c1.65 0 3-1.35 3-3V3c0-1.65-1.35-3-3-3z"/>
-                    </svg>
-                    <svg class="setup-product__checkbox-on" xmlns="http://www.w3.org/2000/svg" width="27" height="23"><path fill="#c5c5c5" d="M7.285 7.486l-2.829 2.829 7.783 7.783L26.171 4.166l-2.828-2.829-11.104 11.102z"/><path fill="#c5c5c5" d="M21 20c0 .542-.458 1-1 1H3c-.542 0-1-.458-1-1V3c0-.542.458-1 1-1h16.908L21.493.415A2.96 2.96 0 0 0 20 0H3C1.35 0 0 1.35 0 3v17c0 1.65 1.35 3 3 3h17c1.65 0 3-1.35 3-3v-9.829l-2 2V20z"/>
-                    </svg>
-                  </span>
+                  <svg class="setup-product__field-indicator setup-product__field-indicator--checkbox-on" fill="#c5c5c5" xmlns="http://www.w3.org/2000/svg" width="27" height="23"><path d="M7.285 7.486l-2.829 2.829 7.783 7.783L26.171 4.166l-2.828-2.829-11.104 11.102z"/><path fill="#c5c5c5" d="M21 20c0 .542-.458 1-1 1H3c-.542 0-1-.458-1-1V3c0-.542.458-1 1-1h16.908L21.493.415A2.96 2.96 0 0 0 20 0H3C1.35 0 0 1.35 0 3v17c0 1.65 1.35 3 3 3h17c1.65 0 3-1.35 3-3v-9.829l-2 2V20z"/>
+                  </svg>
+                  <svg class="setup-product__field-indicator setup-product__field-indicator--checkbox-off" fill="#c5c5c5" xmlns="http://www.w3.org/2000/svg" width="23" height="23"><path d="M20 2c.542 0 1 .458 1 1v17c0 .542-.458 1-1 1H3c-.542 0-1-.458-1-1V3c0-.542.458-1 1-1h17m0-2H3C1.35 0 0 1.35 0 3v17c0 1.65 1.35 3 3 3h17c1.65 0 3-1.35 3-3V3c0-1.65-1.35-3-3-3z"/>
+                  </svg>
                 </li>
               </ul>
             </fieldset>
@@ -218,22 +208,18 @@
                 <li class="setup-product__charge-item setup-product__charge-item--storage">
                   <label class="setup-product__label-field" for="storage-battery">Аккумуляторные</label>
                   <input class="setup-product__field setup-product__field--charge-field visually-hidden" type="radio" name="charge-type" value="storage-battery" id="storage-battery" checked>
-                  <span class="setup-product__field-indicator setup-product__field-indicator--radio">
-                    <svg class="setup-product__radio-on" xmlns="http://www.w3.org/2000/svg" width="25" height="25"><path fill="#c5c5c5" d="M12.5 4c4.687 0 8.5 3.813 8.5 8.5 0 4.687-3.813 8.5-8.5 8.5C7.813 21 4 17.187 4 12.5 4 7.813 7.813 4 12.5 4m0-4C5.597 0 0 5.597 0 12.5S5.597 25 12.5 25 25 19.403 25 12.5 19.403 0 12.5 0z"/><circle fill="#c5c5c5" cx="12.5" cy="12.5" r="4.5"/>
-                    </svg>
-                    <svg class="setup-product__radio-off" xmlns="http://www.w3.org/2000/svg" width="25" height="25"><path fill="#c5c5c5" d="M12.5 4c4.687 0 8.5 3.813 8.5 8.5 0 4.687-3.813 8.5-8.5 8.5C7.813 21 4 17.187 4 12.5 4 7.813 7.813 4 12.5 4m0-4C5.597 0 0 5.597 0 12.5S5.597 25 12.5 25 25 19.403 25 12.5 19.403 0 12.5 0z"/>
-                    </svg>
-                  </span>
+                  <svg class="setup-product__field-indicator setup-product__field-indicator--radio-on" xmlns="http://www.w3.org/2000/svg" fill="#c5c5c5" width="25" height="25"><path d="M12.5 4c4.687 0 8.5 3.813 8.5 8.5 0 4.687-3.813 8.5-8.5 8.5C7.813 21 4 17.187 4 12.5 4 7.813 7.813 4 12.5 4m0-4C5.597 0 0 5.597 0 12.5S5.597 25 12.5 25 25 19.403 25 12.5 19.403 0 12.5 0z"/><circle fill="#c5c5c5" cx="12.5" cy="12.5" r="4.5"/>
+                  </svg>
+                  <svg class="setup-product__field-indicator setup-product__field-indicator--radio-off" xmlns="http://www.w3.org/2000/svg" fill="#c5c5c5" width="25" height="25"><path d="M12.5 4c4.687 0 8.5 3.813 8.5 8.5 0 4.687-3.813 8.5-8.5 8.5C7.813 21 4 17.187 4 12.5 4 7.813 7.813 4 12.5 4m0-4C5.597 0 0 5.597 0 12.5S5.597 25 12.5 25 25 19.403 25 12.5 19.403 0 12.5 0z"/>
+                  </svg>
                 </li>
                 <li class="setup-product__charge-item setup-product__charge-item--network-charging">
                   <label class="setup-product__label-field" for="network-charging">Сетевые</label>
                   <input class="setup-product__field setup-product__field--charge-field visually-hidden" type="radio" name="charge-type" value="network-charging" id="network-charging">
-                  <span class="setup-product__field-indicator setup-product__field-indicator--radio">
-                    <svg class="setup-product__radio-on" xmlns="http://www.w3.org/2000/svg" width="25" height="25"><path fill="#c5c5c5" d="M12.5 4c4.687 0 8.5 3.813 8.5 8.5 0 4.687-3.813 8.5-8.5 8.5C7.813 21 4 17.187 4 12.5 4 7.813 7.813 4 12.5 4m0-4C5.597 0 0 5.597 0 12.5S5.597 25 12.5 25 25 19.403 25 12.5 19.403 0 12.5 0z"/><circle fill="#c5c5c5" cx="12.5" cy="12.5" r="4.5"/>
-                    </svg>
-                    <svg class="setup-product__radio-off" xmlns="http://www.w3.org/2000/svg" width="25" height="25"><path fill="#c5c5c5" d="M12.5 4c4.687 0 8.5 3.813 8.5 8.5 0 4.687-3.813 8.5-8.5 8.5C7.813 21 4 17.187 4 12.5 4 7.813 7.813 4 12.5 4m0-4C5.597 0 0 5.597 0 12.5S5.597 25 12.5 25 25 19.403 25 12.5 19.403 0 12.5 0z"/>
-                    </svg>
-                  </span>
+                  <svg class="setup-product__field-indicator setup-product__field-indicator--radio-on" fill="#c5c5c5" xmlns="http://www.w3.org/2000/svg" width="25" height="25"><path d="M12.5 4c4.687 0 8.5 3.813 8.5 8.5 0 4.687-3.813 8.5-8.5 8.5C7.813 21 4 17.187 4 12.5 4 7.813 7.813 4 12.5 4m0-4C5.597 0 0 5.597 0 12.5S5.597 25 12.5 25 25 19.403 25 12.5 19.403 0 12.5 0z"/><circle fill="#c5c5c5" cx="12.5" cy="12.5" r="4.5"/>
+                  </svg>
+                  <svg class="setup-product__field-indicator setup-product__field-indicator--radio-off" fill="#c5c5c5" xmlns="http://www.w3.org/2000/svg" width="25" height="25"><path d="M12.5 4c4.687 0 8.5 3.813 8.5 8.5 0 4.687-3.813 8.5-8.5 8.5C7.813 21 4 17.187 4 12.5 4 7.813 7.813 4 12.5 4m0-4C5.597 0 0 5.597 0 12.5S5.597 25 12.5 25 25 19.403 25 12.5 19.403 0 12.5 0z"/>
+                  </svg>
                 </li>
               </ul>
             </fieldset>
