Оживление демонстрации входа пользователя

--- a/index.html
+++ b/index.html
@@ -475,5 +475,6 @@
       </div>
     </section>
   <script src="js/modal-feedback.js"></script>
+  <script src="js/authorization.js"></script>
   </body>
 </html>
