Оживление элементов шапки

--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
             </svg>
           </div>
           <div class="main-header__bookmarks-block">
-            <p class="main-header__bookmarks-text">Закладки <span class="main-header__bookmarks-counter">0</span></p>
+            <p class="main-header__bookmarks-text">Закладки <span class="main-header__counter main-header__counter--bookmarks-counter">0</span></p>
           </div>
           <div class="main-header__cart-block">
-            <p class="main-header__cart-text">Корзина <span class="main-header__cart-counter">0</span></p>
+            <p class="main-header__cart-text">Корзина <span class="main-header__counter main-header__counter--cart-counter">0</span></p>
           </div>
           <div class="main-header__buy-block">
             <a class="main-header__buy-button" href="#">Оформить заказ</a>
@@ -476,5 +476,6 @@
     </section>
   <script src="js/modal-feedback.js"></script>
   <script src="js/authorization.js"></script>
+  <script src="js/header-actions.js"></script>
   </body>
 </html>
