1-й вариант оживления слайдера

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                 <p class="product-slider__slide-slogan">Настоящие мужские игрушки</p>
                 <img class="product-slider__slide-image" src="img/perforator-slide.jpg" width="620" height="226" alt="Изображение строителя с перфоратором">
               </div>
-              <div class="product-slider__drills-slide">
+              <div class="product-slider__drills-slide active">
                 <h4 class="product-slider__slide-title">Дрели</h4>
                 <p class="product-slider__slide-slogan">Соседям на радость!</p>
                 <img class="product-slider__slide-image" src="img/drill-slide.jpg" width="620" height="266" alt="Изображение строителя с дрелью">
@@ -477,5 +477,6 @@
   <script src="js/modal-feedback.js"></script>
   <script src="js/authorization.js"></script>
   <script src="js/header-actions.js"></script>
+  <script src="js/main-slider.js"></script>
   </body>
 </html>
