2-й вариант оживления слайдера

--- a/index.html
+++ b/index.html
@@ -142,10 +142,10 @@
               </div>
               <a class="product-slider__slide-link button" href="catalog.html">Открыть каталог</a>
               <div class="product-slider__toggle-block">
-                <label class="product-slider__toggle-slide product-slider__toggle-slide--perforator-toggle" for="perforator-slide">
+                <label class="product-slider__toggle-slide product-slider__toggle-slide--perforator-toggle" for="perforator-slide" tabindex="0">
                   <span class="visually-hidden">Открыть слайд с перфораторами</span>
                 </label>
-                <label class="product-slider__toggle-slide product-slider__toggle-slide--drill-toggle" for="drill-slide">
+                <label class="product-slider__toggle-slide product-slider__toggle-slide--drill-toggle" for="drill-slide" tabindex="0">
                   <span class="visually-hidden">Открыть слайд с дрелями</span>
                 </label>
               </div>
