Оживление модального окна добавления товара в корзину

--- a/index.html
+++ b/index.html
@@ -465,18 +465,21 @@
       </button>
     </section>
     <section class="modal modal--cart-add">
-      <button class="modal__button-close" type="button">
-        <span class="visually-hidden">Закрыть окно</span>
-      </button>
-      <h2 class="modal--cart-add__title">Товар добавлен в корзину!</h2>
-      <div class="modal--cart-add__select-actions">
-        <a class="modal--cart-add__buy-complete button" href="#">Оформить заказ</a>
-        <button class="modal--cart-add__continue-select" type="button">Продолжить покупки</button>
+      <h2 class="visually-hidden">Окно перехода к корзине покупок</h2>
+      <div class="modal--cart-add-content">
+        <button class="modal__button-close" type="button">
+          <span class="visually-hidden">Закрыть окно</span>
+        </button>
+        <h2 class="modal--cart-add__title">Товар добавлен в корзину!</h2>
+        <div class="modal--cart-add__select-actions">
+          <a class="modal--cart-add__buy-complete button" href="#">Оформить заказ</a>
+          <button class="modal--cart-add__continue-select" type="button">Продолжить покупки</button>
+        </div>
       </div>
     </section>
   <script src="js/modal-feedback.js"></script>
   <script src="js/authorization.js"></script>
-  <script src="js/header-actions.js"></script>
+  <script src="js/product-actions.js"></script>
   <script src="js/main-slider.js"></script>
   </body>
 </html>
