1-й вариант оживления списка сервисов

--- a/index.html
+++ b/index.html
@@ -276,12 +276,12 @@
           </header>
           <div class="services__main-content">
             <ul class="services__list">
-              <li class="services__item services__item--current">Доставка</li>
-              <li class="services__item">Гарантия</li>
-              <li class="services__item">Кредит</li>
+              <li class="services__item services__item--delivery services__item--current" tabindex="0">Доставка</li>
+              <li class="services__item services__item--guarantee" tabindex="0">Гарантия</li>
+              <li class="services__item services__item--credit" tabindex="0">Кредит</li>
             </ul>
             <div class="services__list-description">
-              <div class="services__description-item services__description-item--delivery">
+              <div class="services__description-item services__description-item--delivery services__description-item--current">
                 <h3 class="services__item-title">Доставка</h3>
                 <p class="services__item-description">
                   Мы с удовольствием доставим ваш товар прямо<br>
@@ -486,5 +486,6 @@
   <script src="js/product-actions.js"></script>
   <script src="js/main-slider.js"></script>
   <script src="js/modal-map.js"></script>
+  <script src="js/services.js"></script>
   </body>
 </html>
